[package]
name = "asn1-der"
version = "0.1.0"
authors = ["meh. <meh@1aim.com>"]
edition = "2018"

[dependencies]
core  = { version = "0.1", package = "asn1-core", path = "../asn1-core" }
bytes = "0.4"

bigint  = { version = "0.2", package = "num-bigint" }
num-traits  = "0.2"
num-integer = "0.1"
nom = "4.2.3"
failure = "0.1.5"
serde = "1.0.92"

[dev-dependencies]
asn1-derive = { path = "../asn1-derive" }
serde = "1.0.92"
serde_derive = "1.0.92"
