[package]
name = "asn1-der"
version = "0.1.0"
authors = ["Erin Power <e.power@dac.eu>"]
edition = "2018"

[dependencies]
core  = { version = "0.1", package = "asn1-core", path = "../asn1-core" }
failure = "0.1.5"
hex = "0.3.2"
log = "0.4.6"
nom = "5"
serde = "1.0.92"

[dev-dependencies]
serde = "1.0.92"
serde_derive = "1.0.92"
hex = "0.3.2"
