[package]
name    = "asn1-derive"
version = "0.1.0"
authors = ["meh. <meh@schizofreni.co>"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "asn1_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4" }
quote       = "0.6"
syn         = { version = "0.15", features = ["extra-traits"] }

[features]
der = []

[dev-dependencies]
failure = "0.1.5"
asn1-der = { path = "../asn1-der" }
