[package]
name = "asn1"
version = "0.1.0"
authors = ["Erin Power <e.power@dac.eu>"]
edition = "2018"

[dependencies]
core = { path = "../asn1-core", package = "asn1-core" }
der = { path = "../asn1-der", package = "asn1-der", optional = true }
notation = { path = "../asn1-notation", package = "asn1-notation", optional = true }

[[example]]
name = "print"
required-features = ["der"]

[dev-dependencies]
hex = "0.3.2"
