[package]
name    = "dasn1-core"
version = "0.1.1"
authors = ["Erin Power <e.power@dac.eu>"]
license = "MIT/Apache-2.0"
description = "A library of ASN.1 data types."
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
failure = "0.1.5"
bit-vec = "0.6"
num-bigint = "0.2.2"
typenum = "1.10.0"
lazy_static = "1.3.0"
log = "0.4.7"
