[package]
authors = ["Erin Power <e.power@dac.eu>"]
categories = ["data-structures", "encoding", "parser-implementations"]
description = "A library of ASN.1 data types."
edition = "2018"
keywords = ["per", "asn1", "der", "ber", "protocol"]
license = "MIT/Apache-2.0"
name = "dasn1-core"
repository = "https://github.com/dac-gmbh/asn1"
version = "0.1.1"

[badges]
travis-ci = { repository = "https://travis-ci.org/dac-gmbh/asn1" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1", features = ["derive"] }
failure = "0.1.5"
bit-vec = "0.6"
num-bigint = "0.2.2"
typenum = "1.10.0"
lazy_static = "1.3.0"
log = "0.4.7"
