[package]
authors = ["Erin Power <e.power@dac.eu>"]
categories = ["data-structures", "encoding", "parser-implementations"]
description = "A ASN.1 DER encoder & decoder"
edition = "2018"
keywords = ["serialisation", "asn1", "der", "ber", "serde"]
license = "MIT/Apache-2.0"
name = "dasn1-der"
repository = "https://github.com/dac-gmbh/asn1"
version = "0.1.1"

[badges]
travis-ci = { repository = "https://travis-ci.org/dac-gmbh/asn1" }
maintenance = { status = "actively-developed" }

[dependencies]
core  = { version = "0.1", package = "dasn1-core", path = "../dasn1-core" }
failure = "0.1.5"
hex = "0.3.2"
log = "0.4.6"
nom = "5"
serde = "1.0.92"
num-traits = "0.2.8"
num-bigint = "0.2.2"

[dev-dependencies]
serde = "1.0.92"
serde_derive = "1.0.92"
hex = "0.3.2"
env_logger = "0.6.2"
typenum = "1.10.0"
