[package]
name = "dasn1-derive"
version = "0.1.0"
authors = ["Erin Power <e.power@dac.eu>"]
edition = "2018"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.1", features = ["default", "extra-traits"] }
quote = "1.0.0"

[dev-dependencies]
dasn1 = { version = "0.1.0", path = "../dasn1" }

[build-dependencies]
walkdir = "2.2.9"
