[package]
name = "dasn1-per"
version = "0.1.1"
authors = ["Erin Power <xampprocky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.1"
num-traits = { version = "0.2.8", features = ["i128"] }
