[package]
name = "dasn1-tests"
version = "0.1.0"
authors = ["Erin Power <e.power@dac.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasn1 = { version = "0.1", path = "../dasn1", features = ["der", "per", "derive"] }
