[package]
name = "dasn1"
version = "0.1.0"
authors = ["Erin Power <e.power@dac.eu>"]
edition = "2018"

[dependencies]
core = { path = "../dasn1-core", package = "dasn1-core" }
der = { path = "../dasn1-der", package = "dasn1-der", optional = true }
notation = { path = "../dasn1-notation", package = "dasn1-notation", optional = true }

[[example]]
name = "print"
required-features = ["der"]

[dev-dependencies]
hex = "0.3.2"
