[package]
name = "dasn1"
version = "0.1.1"
authors = ["Erin Power <e.power@dac.eu>"]
edition = "2018"
description = "An implementation of the ASN.1 X.680–X.699 standards"
license = "MIT/Apache-2.0"
repository = "https://github.com/dac-gmbh/asn1"
keywords = ["asn1", "der", "ber", "protocol", "notation"]
categories = ["command-line-utilities", "encoding", "parser-implementations"]

[badges]
travis-ci = { repository = "https://travis-ci.org/dac-gmbh/asn1" }
maintenance = { status = "actively-developed" }

[dependencies]
core = { version = "0.1.1",  path = "../dasn1-core", package = "dasn1-core" }
der = { version = "0.1.1",  path = "../dasn1-der", package = "dasn1-der", optional = true }
derive = { version = "0.1.1",  path = "../dasn1-derive", package = "dasn1-derive", optional = true }
notation = { version = "0.1.1", path = "../dasn1-notation", package = "dasn1-notation", optional = true }
per = { version = "0.1.1",  path = "../dasn1-per", package = "dasn1-per", optional = true }

[features]

[[example]]
name = "print"
required-features = ["der"]

[dev-dependencies]
hex = "0.3.2"

[package.metadata.docs.rs]
all-features = true
